<resources>
    <string name="app_name">Be Mohabatesh</string>
    <string name="application_title">Be Mohabatesh</string>
    <string name="today_text">Today</string>
    <string name="future_text">Future</string>
    <string name="past_text">Past</string>
    <string name="this_week_text">This Week</string>
    <string name="this_month_text">This Month</string>
    <string name="fab_button" translatable="false">fab button</string>
    <string name="fab_text" translatable="false">Add</string>
    <string name="title_activity_add_new_task">Add New Task</string>
    <string name="add_new_task_title">Add New Task</string>
    <string name="task_name">Name</string>
    <string name="choose_period_error">Choose One Option</string>
    <string name="choose_period_drop_down_title">Choose Period</string>
    <string name="add_successfully">Successfully Added</string>
    <string name="edit_successfully">Successfully Edited</string>
    <string name="new_task_title_hint">Title</string>
    <string name="new_task_description_hint">Description</string>
    <string name="add_new_task_button_txt">Add</string>
    <string name="edit_task_button_txt">Edit</string>
    <string name="add_new_task_dropdown_title">Choose Period</string>
    <string name="edit_task_title">Task Detail</string>
    <string name="dialog_title_delete_item">Will you delete task?</string>
    <string name="dialog_massage_delete_item">Deleting task.</string>
    <string name="delete_task_toast">Deleted.</string>

    <string name="period_daily">Daily</string>
    <string name="period_weekly">Weekly</string>
    <string name="period_monthly">Monthly</string>

    <string name="main_nav_periodic_task_title">Habits</string>
    <string name="main_nav_normal_task_title">Deadlined Task</string>
    <string name="main_nav_history_title">History</string>
    <string name="main_nav_open">Open Navigation Drawer</string>
    <string name="main_nav_close">Close Navigation Drawer</string>
    <string name="main_nav_drawer_communicate_title">Communication</string>
    <string name="main_nav_about_title">About us</string>
    <string name="main_nav_contact_title">Contact us</string>
    <string name="main_nav_drawer_home_title">Home</string>
    <string name="choose_date_button">Choose Date</string>

    <string name="choose_date_ok_text">OK</string>
    <string name="choose_date_cancel_text">Cancel</string>
    <string name="choose_date_today_text">Today</string>
    <string name="choose_date_error">No date has been chosen yet</string>
    <string name="main_nav_simple_task_title">Simple Task</string>
    <string name="main_activity_title">Unfinished Tasks</string>
    <string name="main_bottom_sheet_txt">Select the type of task</string>
    <string name="timed_task_btn_txt">Deadlined Tasks</string>
    <string name="periodic_task_btn_txt">Habits</string>
    <string name="simple_task_btn_txt">Simple Tasks</string>

    <string name="about_Toast">Well you already know me!…What else is there to say?</string>
    <string name="contact_us_title">We\'ll be glad to hear your feedback!</string>
    <string name="contact_phone_number">Phone number: +989157476168</string>
    <string name="contact_telegram">Telegram: t.me/mscha03</string>
    <string name="contact_eitaa">Eitaa: eitaa.ir/mscha03</string>
    <string name="contact_email">Email: m.saleh.sedeghi@gmail.com</string>
    <string name="delete_btn_description">Delete Task</string>
    <string name="edti_btn_description">Edit Task</string>
    <string name="description_text">Description</string>
    <string name="drawer_btn_description">Drawer Menu</string>
    <string name="add_btn_description">Add Task</string>
    <string name="Tasks_title">Tasks</string>
    <string name="list_item_button">Details Button</string>


    <string name="history_chart_undone">Unfinished</string>
    <string name="history_chart_green_done">Perfect</string>
    <string name="history_chart_yellow_done">Good</string>
    <string name="history_chart_red_done">Bad</string>
    <string name="history_chart_description">Detail</string>


    <string name="history_detail_title">Habit Name</string>
    <string name="description_textView">Description</string>
    <string name="period_textView">Period</string>
    <string-array name="period">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="shamsiMonth">
        <item>Farvardin</item>
        <item>Ordibehesht</item>
        <item>Khordad</item>
        <item>Tir</item>
        <item>Mordad</item>
        <item>Shahrivar</item>
        <item>Mehr</item>
        <item>Aban</item>
        <item>Azar</item>
        <item>Day</item>
        <item>Bahman</item>
        <item>Esfand</item>
    </string-array>

    <string-array name="shamsiWeekDay">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="us_text_1">"Designer and Programmer: "</string>
    <string name="us_text_2">Mohammad Saleh Seddighi</string>
    <string name="us_text_3">Thanks to the members of the \"Be Mohabatesh\" group
        for testing and providing suggestions
        and other friends who helped us during this application\'s development.</string>


    <string name="main_nav_settings">Settings</string>
    <string name="setting_item_language">Language</string>
    <string name="app_language">English</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_dead_lined_task">DeadLinedTaskActivity</string>
    <string name="main_nav_special_day_task_title">Special Day Task</string>


</resources>