<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleTaskDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_task_title"
            android:layout_width="fill_parent"
            android:layout_weight="100"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/edit_task_title"
            android:textColor="@color/text"
            android:textSize="25sp" />


        <ImageButton
            android:id="@+id/edit_button_edit_activity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/box_background_shape"
            android:contentDescription="@string/edti_btn_description"
            android:src="@drawable/baseline_edit_square_24"
            android:layout_margin="5sp"/>

        <ImageButton
            android:id="@+id/delete_button_edit_activity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/box_background_shape"
            android:contentDescription="@string/delete_btn_description"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginEnd="20sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/today_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background_shape"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/slide_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_background_shape"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_task_title">


            <TextView
                android:id="@+id/task_title_edit_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_task_title_hint"
                android:padding="15sp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text"
                android:textColorHint="@color/black"
                android:textSize="20sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Separator" />

            <TextView
                android:id="@+id/task_description_edit_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/description_text"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="20sp" />


        </LinearLayout>





    </LinearLayout>

</LinearLayout>