<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background_shape"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_background_shape"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_bottom_sheet_txt"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/timed_task_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/timed_task_btn_txt"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:foreground="?android:attr/selectableItemBackground"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/periodic_task_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/periodic_task_btn_txt"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:foreground="?android:attr/selectableItemBackground"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/simple_task_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/simple_task_btn_txt"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="21dp"
                android:textSize="15sp" />


        </LinearLayout>



    </LinearLayout>


</LinearLayout>
