<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSimpleTask"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/add_new_task_title"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/today_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background_shape"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/slide_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_background_shape"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_task_title">


            <EditText
                android:id="@+id/task_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/new_task_title_hint"
                android:inputType="textVisiblePassword"
                android:padding="15sp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Separator" />

            <EditText
                android:id="@+id/task_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/new_task_description_hint"
                android:inputType="textVisiblePassword"
                android:padding="15sp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/add_new_task_button_txt"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:textSize="15sp" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>