<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background_shape"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_background_shape"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <EditText
                android:id="@+id/edit_task_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/new_task_title_hint"
                android:inputType="textVisiblePassword"
                android:padding="15sp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Separator" />

            <EditText
                android:id="@+id/edit_task_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/new_task_description_hint"
                android:inputType="textVisiblePassword"
                android:maxLength="999999"
                android:padding="15sp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/edit_task_button_txt"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:textSize="15sp" />

        </LinearLayout>



    </LinearLayout>


</LinearLayout>